--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <meta property="og:image" content="./logo512.png" />
     <meta
       property="og:url"
-      content="https://restaurant-reviewr.netlify.app/"
+      content="https://restaurant-review-test.netlify.app/"
     />
 
     <link
