--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <meta property="og:image" content="./logo512.png" />
     <meta
       property="og:url"
-      content="https://restaurant-review-test.netlify.app/"
+      content="https://restaurant-reviewr.netlify.app/"
     />
 
     <link
@@ -45,10 +45,6 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4009387b6b6a3a024cc1af47c7bb16db&libraries=services"
-    ></script>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4009387b6b6a3a024cc1af47c7bb16db&libraries=services"
